# kitchen-dashboard

./: .env.example  .gitignore  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: account.py  admin_users.py  auth.py  bring.py  router.py  setup.py  tasks.py
backend/app/auth/: dependencies.py  passwords.py  sessions.py
backend/app/cli/: __init__.py  bring_lists.py
backend/app/core/: config.py  time.py
backend/app/database/: models.py  session.py
backend/app/providers/: bring.py
backend/app/providers/calendar/: __init__.py  ics.py
backend/app/providers/weather/: open_meteo.py
backend/app/schemas/: __init__.py  auth.py  bring.py  calendar.py  common.py  dashboard.py  health.py  tasks.py  weather.py
backend/app/services/: authentication_service.py  bring.py  calendar.py  demo.py  weather.py
backend/migrations/: env.py
backend/migrations/versions/: 20260713_0001_initial_cache.py  20260713_0002_auth_households.py  20260715_0003_shared_tasks.py  20260716_0004_bring_integration.py
backend/tests/: conftest.py  test_authentication.py  test_bring.py  test_calendar_normalization.py  test_calendar_service.py  test_health.py  test_tasks.py  test_weather.py
deploy/: compose.prod.yaml  compose.yaml
docs/: architecture.md  authentication.md  authorization.md  calendar-integration.md  deployment.md  design-system.md  future-modules.md
frontend/: .dockerignore  .prettierignore  Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  (+4 more)
(+43 files in other folders)
