[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kitchen-dashboard-backend"
version = "0.1.0"
description = "Provider and API layer for the Kitchen Dashboard"
requires-python = ">=3.12,<3.15"
dependencies = [
  "alembic==1.16.4",
  "bring-api==1.1.2",
  "asyncpg==0.31.0",
  "fastapi==0.119.1",
  "httpx==0.28.1",
  "icalendar==6.3.1",
  "pydantic-settings==2.10.1",
  "pwdlib[argon2]==0.3.0",
  "python-dateutil==2.9.0.post0",
  "recurring-ical-events==3.8.0",
  "sqlalchemy[asyncio]==2.0.41",
  "uvicorn[standard]==0.38.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite==0.21.0",
  "mypy==1.18.2",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "pytest-cov==6.2.1",
  "respx==0.22.0",
  "ruff==0.14.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --disable-warnings --strict-markers"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]
ignore = ["B008"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations"]

[[tool.mypy.overrides]]
module = ["icalendar", "recurring_ical_events"]
ignore_missing_imports = true
